--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://adencollage.wasmer.app/">
-    <meta property="og:title" content="دليل التنسيق والقبول لكل الجامعات اليمنية">
-    <meta property="og:description" content="نماذج كل الجامعات اليمنية/تخصصات كل الجامعات اليمنية">
+    <meta property="og:title" content="نماذج كل الجامعات اليمنية">
+    <meta property="og:description" content="نماذج لكل السنوات والتخصصات/قم بمساعدتنا برفع النماذج المتوفرة لديك">
     <meta property="og:image" content="https://adencollage.wasmer.app/graduate.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
