--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <!-- Primary Meta Tags -->
-    <title>دليل التنسيق والقبول اليمن</title>
-    <meta name="description" content="نماذج امتحانات القبول عدن/تسجيل الكليات عدن/تخصصات الكليات عدن">
-    <meta name="keywords" content="دليل التنسيق والقبول عمرو كريم،عمرو كريم تخصصات القبول،دليل التنسيق الجامعي عدن">
+    <title>نماذج الجامغات</title>
+    <meta property="og:description" content="نماذج امتحانات كل الجامعات اليمنية/اقسام الكليات اليمنيه/نماذج الطب/نماذج الجامعات">
+    <meta name="keywords" content="دليل التنسيق والقبول عمرو كريم،عمرو كريم تخصصات القبول،عمرو كريم نماذج الجامعات،نماذج الجامعات،دليل التنسيق الجامعي عدن"/>
     <meta name="author" content="عمرو كريم">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://adencollage.wasmer.app/">
     <meta property="og:title" content="نماذج كل الجامعات اليمنية">
-    <meta property="og:description" content="نماذج لكل السنوات والتخصصات/قم بمساعدتنا برفع النماذج المتوفرة لديك">
+    <meta property="og:description" content="قم بمساعدتنا بنشر الموقع واضافة نماذج جامعتك المتوفرة لديك">
     <meta property="og:image" content="https://adencollage.wasmer.app/graduate.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
